--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -1,4 +1,4 @@
-
+/* header css */
 .homepage{
     background-image: url("../images/carBackground5.jpeg");
     height: 100vh;
@@ -13,7 +13,7 @@
 
 .homepage-text{
     color:WHITE;
-
+    
     position: absolute;
     top: 45%;
     left: 25%;
@@ -50,3 +50,118 @@
 .footer-specs{
 background-color: black;
 }
+
+
+.navbar {
+  position: fixed !important;
+          top: 0;
+          left: 0;
+          right: 0;
+    background-color: #333;
+    color: #fff;
+    padding: 1rem 0;
+    z-index: 1000;
+  }
+
+  /* .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  } */
+
+  .logo {
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .menu-button {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+  }
+
+  .bar {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 3px 0;
+  }
+
+
+  .menu {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 0px !important;
+  }
+
+  .menu li {
+    padding: 0;
+  }
+
+  .menu a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+  }
+
+  @media (max-width: 768px) {
+    .menu-button {
+      display: flex;
+    }
+
+    .menu {
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #333;
+      width: 100%;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: transform 0.2s ease-in-out;
+      z-index: 1;
+    }
+
+    .menu.open {
+      transform: scaleY(1);
+      /* margin-top: -23px; */
+    }
+}
+
+
+/* its a css for text movement */
+.word-by-word span {
+    display: inline-block;
+    opacity: 0;
+    transform: translateY(1em);
+    animation: appear 0.5s forwards;
+    animation-delay: 0.1s;
+  }
+  
+  @keyframes appear {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+
+  .letter-by-letter span {
+    display: inline-block;
+    opacity: 0;
+    transform: translateY(1em);
+    animation: appear 0.5s forwards;
+    animation-delay: calc(0.1s * var(--index));
+  }
+  
+  @keyframes appear {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
